codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exploration_marks_card_failed.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: exec_blob
---
• Exploration failed · 1 failed
  └ Failed searching needle in src · 0 result lines
