codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Booting MCP server: alpha · 0s · esc to interrupt                             "
"                                                                                "
"                                                                                "
"› Add a follow-up while Codex works                                             "
"                                                                                "
"  gpt-5.6-sol default  ·  /tmp/project                                          "
